# gng

./: .gitignore  CMakeLists.txt  README.md  design.md
commit-mgr/: CMakeLists.txt
commit-mgr/pub/: commit-mgr.h
commit-mgr/src/: commit-mgr.cpp
commit-mgr/test/: commit-m.cpp
commit-ops/: CMakeLists.txt
commit-ops/pub/: commit-ops.h
commit-ops/src/: commit-ops.cpp
commit-ops/test/: commit.cpp
data-ops/: CMakeLists.txt
data-ops/inc/: data-struct.h
data-ops/pub/: data-ops.h
data-ops/src/: data-ops.cpp  file-ops.cpp
data-ops/test/: file-ops.cpp  test_binary.cpp  test_binary_file.cpp  test_text.cpp
data-proto/: CMakeLists.txt  commit.proto  file.proto
inc/: args.hxx  commands-impl.h  config.h  file-lock.h  fs-utils.h  type.h  utils.h
inc/debug/: debug-help.h  log.h
proto/: CMakeLists.txt  commit.proto  compress.proto  config.proto  file.proto  meta.proto
pub/: bytes-utils.h  fs-utils.h  type.h  utils.h  vfs.h
pub/debug/: debug-help.h  log.h
src/: commands-impl.cpp  config.cpp  lock.cpp  main.cpp
